--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,10 @@
 [[module.imports]]
   path = 'github.com/panr/hugo-theme-terminal/v4'
 
-baseurl = "/"
+baseURL = "https://justinryanc.github.io/justinryanc.com-v2/"
+RelativeURLs=true
+CanonifyURLs=true
+
 languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
